@@ -10,8 +10,9 @@ homevent (0.2.6) stable; urgency=low
     instead of their own parameters
   * Logging for subsystems (like "onewire", for which I need it)
   * Support the 1wire/AAG wind vane
+  * Show details on 1wire devices.
 
- -- Matthias Urlichs <matthias@urlichs.de>  Tue, 18 Dec 2007 13:53:19 +0100
+ -- Matthias Urlichs <matthias@urlichs.de>  Tue, 18 Dec 2007 20:12:53 +0100
 
 homevent (0.2.5.6) stable; urgency=low
 
